Fix bug: card list overlapping card canvas

--- a/CardGenerator/react-canvas-draw/src/App.css
+++ b/CardGenerator/react-canvas-draw/src/App.css
@@ -157,7 +157,7 @@
 
 .cardPanel {
     position: absolute;
-    left: 210px;
+    left: 230px;
 }
 
 .cvsCard {
